Sidebar no longer covers upload modal

--- a/client/src/styles/UploadModal.css
+++ b/client/src/styles/UploadModal.css
@@ -9,6 +9,7 @@
   left: 0;
   overflow: auto;
   padding-top: 80px;
+  z-index: 3;
 }
 
 .modal-content {
@@ -22,6 +23,7 @@
   border-radius: 2px;
   position: relative;
   overflow: auto;
+  z-index: 3;
 }
 
 .close {
